# stillwater

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
docs/: api-reference.md  configuration.md  testing-locally.md
docs/architecture/: 00-high-level-overview.md  01-backend-request-flow.md  02-data-structures.md  02-database-schema.md  03-auth-system.md  04-audio-system.md  05-progress-system.md  06-breathing-system.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: BreathingEngine.test.ts  Heatmap.test.tsx  SessionCard.test.tsx  authStore.test.ts
frontend/src/api/: auth.ts  client.ts  progress.ts  sessions.ts
frontend/src/data/: ambientSounds.ts  breathingPatterns.ts  sessions.json
frontend/src/hooks/: useAmbientMixer.ts  useAudioEngine.ts  useBellInterval.ts  useBreathingEngine.ts  useMediaSession.ts
frontend/src/lib/: storage.ts
frontend/src/pages/: BreathingPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  OnboardingPage.tsx  (+3 more)
src/stillpoint/: __init__.py  config.py  db.py  dependencies.py  main.py  seed.py
src/stillwater/: __init__.py  config.py  db.py  dependencies.py  main.py  seed.py
stillwater-tui/: README.md  pyproject.toml
stillwater-tui/src/stillwater_tui/: app.py  main.py
stillwater-tui/src/stillwater_tui/audio/: ambient.py  engine.py
stillwater-tui/src/stillwater_tui/screens/: breathing.py  home.py  library.py  progress.py  session_detail.py
stillwater-tui/src/stillwater_tui/storage/: db.py  progress.py
stillwater-tui/src/stillwater_tui/widgets/: badge_card.py  breathing_circle.py  heatmap.py  player_bar.py  session_card.py
stillwater-tui/tests/: test_app.py  test_audio.py  test_storage.py
(+43 files in other folders)
