[project]
name = "stillwater-tui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.70.0",
    "pygame>=2.6.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
stillwater-tui = "stillwater_tui.main:run"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
